2012-07-24  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pcb.h (pcb_sou_type): New.
	* libdtrace/dt_lex.l: Use it to track certain-to-be-types in the
	type slot of structs, unions, and enums.

	* libdtrace/dt_grammar.y (struct_or_union_specifier): Remove
	DT_TOK_IDENT rule: no longer required.
	(struct_or_union_definition): Likewise.

	* libdtrace/Build (libdtrace-build_SRCDEPS): Remove.
	(dt_grammar.[chy]): Make into a %.y-origin pattern rule, to get
	the dependency graph correct and prevent .d-file overwriting
	corrupting dependencies.

	* LICENSE: Fix copyright date.

	* README: We have CTF now.

	* dt_impl.h: Tiny layout fix.
	* dt_module.c (dt_module_getctf): Remove extraneous braces.
	* dt_open.c (dtrace_close): Don't leak the dt_ctf_elf handle.

2012-07-23  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_subr.c (dt_printf): Don't call vsnprintf() multiple
	times in a given va_start/va_end round.
	* COMMANDLINE-OPTIONS: Document that -B works.

	* libdtrace/dt_module.c (dt_module_load): Fix flipped failure case
	in module loading.
	(dt_module_getctf): Only try to load the module if it's not
	already loaded: try to load it before checking CTF state.
	(dt_module_shuffle_to_start): New function.
	(dtrace_update): Call it.

	* libdtrace/dt_open.c (dt_vopen): Shuffle the C and D modules to
	the start of the list before doing type lookups that use them.

	* dt_lex.c (S2{RGX_PSPEC}): Filter out BEGIN, END, and ERROR.
	Avoid depending on yytext while unput()ting.
	(id_or_type): Reformulate to avoid looking up unknown types.
	(input): Delete dead code.
	(unput): Likewise.

	* test/unittest/offsetof/err.D_UNKNOWN.badmemb.r: Adjust.
	* test/unittest/typedef/err.D_SYNTAX.BadExistingTypedef.r: Likewise.

2012-07-21  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_module): New dm_ctdata_data member,
	holding dynamically-allocated decompressed CTF data.
	* libdtrace/dt_module.c: Include <zlib.h>.