@@ -1,3 +1,8 @@
+2012-07-25  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/dt_module.c (dt_module_getctf): Drop dtrace_ctf
+	hardwiring.
+
 2012-07-24  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_pcb.h (pcb_sou_type): New.
